syntax = "proto3";

package getCaptcha;

option go_package = "./proto;getCaptcha";

service GetCaptcha {
  rpc Call(CallRequest) returns (CallResponse) {}
}

message CallRequest {
  string uuid = 1;
}

message CallResponse {
  // 使用字节切片存储图片，利用 json 序列化
  bytes img = 1;
}
